@@ -71,6 +71,7 @@ import CommandLineArgument_test
 import HidraImageSource_test
 import HttpImageSource_test
 import PyTineImageSource_test
+import EpicsImageSource_test
 
 if not PNI_AVAILABLE and not H5PY_AVAILABLE:
     raise Exception("Please install h5py or pni")
@@ -121,6 +122,7 @@ def main():
     HidraImageSource_test.app = app
     HttpImageSource_test.app = app
     PyTineImageSource_test.app = app
+    EpicsImageSource_test.app = app
     if PYTANGO_AVAILABLE:
         CommandLineLavueState_test.app = app
         TangoAttrImageSource_test.app = app
@@ -140,6 +142,9 @@ def main():
     suite.addTests(
         unittest.defaultTestLoader.loadTestsFromModule(
             PyTineImageSource_test))
+    suite.addTests(
+        unittest.defaultTestLoader.loadTestsFromModule(
+            EpicsImageSource_test))
     if PNI_AVAILABLE:
         suite.addTests(
             unittest.defaultTestLoader.loadTestsFromModule(FileWriter_test))
