@@ -3,6 +3,7 @@
 	* add tests for Hidra image source
 	* add tests for Http image source
 	* add tests for PyTine image source
+	* add tests for Epics image source
 	* improve warning message for a missing file name in TangoFileSource
 	* add "File not found" as a no-image message in the HTTP source
 	* tagged as 2.43.9
